--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <body>
         <main>
             <section id="intro">
-                <div id="intro-container">
+                <div class="intro-container desktop">
                     <h1 id="intro-name-container">
                         <span id="intro-name"></span><span id="intro-name-cursor">_</span>
                     </h1>
                     <hr>
                     <h1 id="intro-name-title">Informatiker Applikationsentwicklung</h1>
+                </div>
+                <div class="intro-container mobile">
+                  <h1>Joel<br>Pascal<br>Erni</h1>
                 </div>
                 <svg id="intro-footer-wave" class="svg-wave" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:rgba(NaN, NaN, NaN, 0);display:block;z-index:1;position:relative" preserveAspectRatio="xMidYMid" viewBox="0 0 2560 500">
                     <g transform="translate(1280,250) scale(1,-1) translate(-1280,-250)"><linearGradient id="lg-0.7539933704520068" x1="0" x2="1" y1="0" y2="0">
@@ -160,10 +163,10 @@
                   <animate attributeName="d" dur="10s" repeatCount="indefinite" keyTimes="0;0.333;0.667;1" calcMode="spline" keySplines="0.5 0 0.5 1;0.5 0 0.5 1;0.5 0 0.5 1" begin="0s" values="M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z;M0 0L 0 236.53420423697276Q 256 202.14416154579996  512 173.05927511011012T 1024 166.02610907307798T 1536 220.95720674088162T 2048 239.39812633987563T 2560 210.19009973744045L 2560 0 Z;M0 0L 0 222.55398086858546Q 256 246.5362168111457  512 228.04267390110485T 1024 209.9197142349353T 1536 221.41794260548983T 2048 204.69430207168594T 2560 227.74830911994584L 2560 0 Z;M0 0L 0 198.7332065012474Q 256 267.5408838744002  512 237.44181846699607T 1024 173.50409267084785T 1536 198.5330448172738T 2048 177.8308753629498T 2560 240.494517230866L 2560 0 Z"></animate>
                 </path></g>
               </svg>
-              <div id="footer-container">
-                <p>Font: <a href="https://www.dafont.com/louis-george-cafe.font" target="_blank">Louis George Café</a></p>
+              <div id="footer-container" class="reveal">
+                <p>Font:<br><a href="https://www.dafont.com/louis-george-cafe.font" target="_blank">Louis George Café</a></p>
                 <p>E-mail:<br><a href="mailto:joel.eri@hispeed.ch">joel.erni@hispeed.ch</a></p>
-                <p>Webseite: 7.76MB, 11 Dateien</p>
+                <p>Webseite:<br> 7.76MB, 11 Dateien</p>
               </div>
             </footer>
         </main>
