--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                       </div>
                       <div class="more-me-item">
                         <h3>Sonstiges</h3>
-                        <p><a href="https://github.com/JoelErni" target="_blank">GitHub</a></p>
+                        <p><a href="https://github.com/JoelErni" target="_blank">GitHub</a>, <a href="https://gitlab.com/JoelErni" target="_blank">GitLab</a>, <a href="https://www.linkedin.com/in/joel-erni-a21b9224b/" target="_blank">LinkedIn</a></p>                        
                       </div>   
                     </div>
                   </div>
