--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <main>
+        <div id="loader">
+          <div id="loader-container">
+            <div class="loader-item">
+              <h1>laden...</h1>
+              <button>&Uuml;berspringen</button>
+            </div>  
+          </div>
+        </div>
+        <main id="main">
             <section id="intro">
                 <div class="intro-container desktop">
                     <h1 id="intro-name-container">
@@ -34,7 +42,7 @@
             <section id="me">
                 <div id="me-container">
                   <div>
-                    <p class="reveal">Hallo, ich bin Joel, Informatiker mit einer Leidenschaft für Code.</p>
+                    <p class="reveal">Hallo, ich bin Joel, Informatiker mit einer Leidenschaft f&uuml;r Code.</p>
                   </div>
                   <div>
                     <img id="portrait" class="reveal" src="/content/image/joel_ol.png" alt="Portrait von Joel">
@@ -62,8 +70,8 @@
                         <p>Kriens, Luzern</p>
                       </div>
                       <div class="more-me-item">
-                        <h3>Tätigkeit</h3>
-                        <p>Informatikmittelschüler im 3. Jahr</p>
+                        <h3>T&auml;tigkeit</h3>
+                        <p>Informatikmittelsch&uuml;ler im 3. Jahr</p>
                       </div>
                     </div>
                   </div>
@@ -73,7 +81,7 @@
                     <div class="more-me-container">
                       <div class="more-me-item">
                         <h3>Hobbys</h3>
-                        <p>Videospiele, Aktivitäten mit Freunden, Musik</p>
+                        <p>Videospiele, Aktivit&auml;ten mit Freunden, Musik</p>
                       </div>
                       <div class="more-me-item">
                         <h3>Lieblingsmusiker</h3>
@@ -138,7 +146,7 @@
                   <div class="project-image-container">
                     <h2><a href="https://ipt3.joel-erni1.bbzwinf.ch/" target="_blank">Forza Horizon 5 webseite</a></h2>
                   </div>
-                  <p>Eine Webseite über das Spiel Forza Horizon 5. HTML, CSS, Javascript, PHP und SQL wurde für die Programmierung verwendet.</p>
+                  <p>Eine Webseite &uuml;ber das Spiel Forza Horizon 5. HTML, CSS, Javascript, PHP und SQL wurde f&uuml;r die Programmierung verwendet.</p>
                 </div>
                 <div class="project-item">
                   <div class="project-image-container">
@@ -150,7 +158,7 @@
                   <div class="project-image-container">
                     <h2>Memelab Newsletter</h2>
                   </div>
-                  <p>Ein Meme-Newsletter, in dem man eigene Memes einreichen kann. Auf der Webseite werden die Memes aufgelistet, für die man auch abstimmen kann.</p>
+                  <p>Ein Meme-Newsletter, in dem man eigene Memes einreichen kann. Auf der Webseite werden die Memes aufgelistet, f&uuml;r die man auch abstimmen kann.</p>
                 </div>              
               </div>
             </section>
