--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
           <div id="loader-container">
             <div class="loader-item">
               <h1>laden...</h1>
-              <button>&Uuml;berspringen</button>
+              <button onclick="showPage()">&Uuml;berspringen</button>
+              <p>Einige Elemente werden dann nicht richtig angezeigt.</p>
             </div>  
           </div>
         </div>
