--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="loader-item">
               <h1>laden...</h1>
               <button onclick="showPage()">&Uuml;berspringen</button>
-              <p>Einige Elemente werden dann nicht richtig angezeigt.</p>
+              <p>Beim &Uuml;berspringen werden einige Elemente nicht richtig angezeigt.</p>
             </div>  
           </div>
         </div>
