loader remove after load

--- a/index.html
+++ b/index.html
@@ -144,16 +144,20 @@
               <hr>
               <div id="project-container" class="reveal">
                 <div class="project-item">
-                  <div class="project-image-container">
-                    <h2><a href="https://ipt3.joel-erni1.bbzwinf.ch/" target="_blank">Forza Horizon 5 webseite</a></h2>
-                  </div>
-                  <p>Eine Webseite &uuml;ber das Spiel Forza Horizon 5. HTML, CSS, Javascript, PHP und SQL wurde f&uuml;r die Programmierung verwendet.</p>
+                  <a href="https://ipt3.joel-erni1.bbzwinf.ch/" target="_blank">
+                    <div class="project-image-container">
+                      <h2>Forza Horizon 5 webseite</h2>
+                    </div>
+                    <p>Eine Webseite &uuml;ber das Spiel Forza Horizon 5. HTML, CSS, Javascript, PHP und SQL wurde f&uuml;r die Programmierung verwendet.</p>
+                  </a>
                 </div>
                 <div class="project-item">
-                  <div class="project-image-container">
-                    <h2><a href="https://github.com/JoelErni/IPT_4.1-Unity" target="_blank">!Star Wars</a></h2>
-                  </div>
-                  <p>Ein Jump'n'Run-/Story-Spiel, das von Star Wars inspiriert ist. Das Spiel wurde von mir, Lucas S. und Elias S. programmiert.</p>
+                  <a href="https://github.com/JoelErni/IPT_4.1-Unity" target="_blank">
+                    <div class="project-image-container">
+                      <h2>!Star Wars</h2>
+                    </div>
+                    <p>Ein Jump'n'Run-/Story-Spiel, das von Star Wars inspiriert ist. Das Spiel wurde von mir, Lucas S. und Elias S. programmiert.</p>
+                  </a>
                 </div>
                 <div class="project-item">
                   <div class="project-image-container">
