loading page design

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
         <div id="loader">
           <div id="loader-container">
             <div class="loader-item">
-              <h1>laden...</h1>
-              <button onclick="showPage()">&Uuml;berspringen</button>
-              <p>Beim &Uuml;berspringen werden einige Elemente nicht richtig angezeigt.</p>
+              <h1 id="loader-text">laden</h1>
+              <svg version="1.1" id="L9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 0 0" xml:space="preserve">
+                <path fill="#fff" d="M73,50c0-12.7-10.3-23-23-23S27,37.3,27,50 M30.9,50c0-10.5,8.5-19.1,19.1-19.1S69.1,39.5,69.1,50">
+                  <animateTransform attributeName="transform" attributeType="XML" type="rotate" dur="1s" from="0 50 50" to="360 50 50" repeatCount="indefinite"></animateTransform>
+                </path>
+              </svg>
+              <div id="loader-skip">
+                <button onclick="showPage()">&Uuml;berspringen</button>
+                <p>Beim &Uuml;berspringen werden einige Elemente nicht richtig angezeigt.</p>  
+              </div>
             </div>  
           </div>
         </div>
@@ -179,7 +186,7 @@
               <div id="footer-container" class="reveal">
                 <p>Font:<br><a href="https://www.dafont.com/louis-george-cafe.font" target="_blank">Louis George Café</a></p>
                 <p>E-mail:<br><a href="mailto:joel.eri@hispeed.ch">joel.erni@hispeed.ch</a></p>
-                <p>Webseite:<br> 7.76MB, 11 Dateien</p>
+                <p>Webseite:<br> 1.98MB, 10 Dateien</p>
               </div>
             </footer>
         </main>
