--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="description" content="E-Portfolio von Joel Erni">        
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="content/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="content/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="content/favicon/favicon-16x16.png">
+        <link rel="manifest" href="content/favicon/site.webmanifest">
     </head>
     <body>
         <div id="loader">
@@ -186,7 +190,7 @@
               <div id="footer-container" class="reveal">
                 <p>Font:<br><a href="https://www.dafont.com/louis-george-cafe.font" target="_blank">Louis George Café</a></p>
                 <p>E-mail:<br><a href="mailto:joel.eri@hispeed.ch">joel.erni@hispeed.ch</a></p>
-                <p>Webseite:<br> 1.98MB, 10 Dateien</p>
+                <p>Webseite:<br> 2.02MB, 17 Dateien</p>
               </div>
             </footer>
         </main>
